feat: get users endpoint
